--- a/my-app/package.json
+++ b/my-app/package.json
@@ -21,15 +21,18 @@
     "expo-font": "~10.2.0",
     "expo-splash-screen": "~0.16.2",
     "expo-status-bar": "~1.4.0",
+    "expo-updates": "~0.14.7",
     "react": "18.0.0",
     "react-dom": "18.0.0",
+    "react-icalendar-link": "^3.0.2",
     "react-native": "0.69.6",
     "react-native-numeric-input": "^1.9.1",
     "react-native-paper": "^5.0.0-rc.8",
     "react-native-paper-dropdown": "^1.0.7",
     "react-native-ratings": "^8.1.0",
     "react-native-vector-icons": "^9.2.0",
-    "react-native-web": "~0.18.7"
+    "react-native-web": "~0.18.7",
+    "expo-calendar": "~10.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
